Update get tickets to show fee and time, new method uses Ajax

--- a/content/less/styles.less
+++ b/content/less/styles.less
@@ -179,10 +179,6 @@ th {
 	font-size: 1.6em;
 	font-weight: bold;
 	color: #ffffff;
-	
-	-webkit-border-radius: 5px 5px 0px 0px;
-    -moz-border-radius: 5px 5px 0px 0px;
-    border-radius: 5px 5px 0px 0px;
 }
 
 td {
@@ -192,6 +188,18 @@ td {
 	font-size: 1.4em;
 	color: @primary-text-color;
 	word-break: break-all;
+}
+
+tfoot {
+	background-color: @heading-primary;
+	text-align: center;
+	padding: 10px;
+}
+
+tfoot td {
+	font-size: 1.6em;
+	font-weight: bold;
+	color: #ffffff;
 }
 
 /*============================================================*\
