Updated with stakeinfo

--- a/content/less/_variables.less
+++ b/content/less/_variables.less
@@ -9,6 +9,6 @@
 @heading-secondary: #298CB7; 
 
 /* Footer Colours */
-@footer-background: #121212;
-@footer-text: #606060;
-@footer-links: #606060;
+@footer-background: #2c3e50;
+@footer-text: #D0D0D0;
+@footer-links: #D0D0D0;
