--- a/content/less/styles.less
+++ b/content/less/styles.less
@@ -44,13 +44,13 @@ nav a {
 .mainnav {
 	width: 100%;
 	margin: 0 auto;
-	background-color: #222222;
+	background-color: #34495e;
 }
 
 .nav {
 	width: 100%;
 	margin: 0 auto;
-	background-color: #222222;
+	background-color: #34495e;
 }
 
 .mainnav-wrapper {
@@ -131,7 +131,7 @@ nav a {
 
 .show-tickets {
 	float: right;
-    margin-top: -80px;
+    margin-top: -60px;
 	
 	background: url("../images/show.png") no-repeat;
     height: 32px;
@@ -216,9 +216,6 @@ footer {
 	color: @footer-text;
 	font-size: 1.4em;
 	line-height: 1.6em;
-	-webkit-box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.75);
-	-moz-box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.75);
-	box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.75);
 }
 
 footer a, footer a:visited {
@@ -298,8 +295,8 @@ footer ul li {
 \*============================================================*/
 
 @media only screen and (max-width: 600px) {	
-	h1 {
-		font-size: 2.8em;
+	h2 {
+		font-size: 2.5em;
 	}	
 	
 	h5 {
